--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ body {
 /* Основной стиль кнопок */
 
 .button {
-  display: block;
+  display: inline-block;
   box-sizing: border-box;
   padding: 8px 0;
   font-family: inherit;
@@ -1363,7 +1363,6 @@ body {
 }
 
 .favorite {
-  padding: 8px 0;
   grid-column: 2 / 3;
   background-color: #82B3D3;
 }
@@ -1423,7 +1422,6 @@ body {
 }
 
 .favorite-added {
-  padding: 8px 18px;
   background-color: #7DB54F;
 }
 
